--- a/01_TestingFramework/Gemfile
+++ b/01_TestingFramework/Gemfile
@@ -1,6 +1,6 @@
 # Gemfile
 source 'http://rubygems.org'
-ruby '2.1.0'
+ruby '2.1.3'
  
 gem 'tilt', '~> 1.4.1'
 gem "sinatra"
@@ -17,7 +17,7 @@ gem "coffee-script"
 gem "therubyracer"
 gem "zip"
 gem "parallel_tests"
-
+gem "rspec"
 gem "chromedriver-helper"
 
 gem "activerecord"
