--- a/03_ContinuousIntegration/CI_Server/Vagrantfile
+++ b/03_ContinuousIntegration/CI_Server/Vagrantfile
@@ -2,17 +2,21 @@
 # vi: set ft=ruby :
 
 VAGRANTFILE_API_VERSION = "2"
+HOSTNAME = "ciserver"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.box = "mobileoverlord/centos-6.5"
   config.omnibus.chef_version = "11.6"
-  config.vm.hostname = "ciserver"
+  config.vm.hostname = HOSTNAME
   config.vm.network "private_network", type: "dhcp"
   config.vm.network "forwarded_port", guest: 8080, host: 9080
   config.vm.synced_folder "../Installers", "/Installers"
+
+  config.omnibus.chef_version = :latest
   
   config.vm.provider :virtualbox do |vb|
+    vb.name = HOSTNAME
     vb.customize ["modifyvm", :id, "--memory", "1024"]
     vb.destroy_unused_network_interfaces = true
   end
